--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.70.6",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.8.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
