--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native": "0.70.6",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-simple-toast": "^2.0.0",
     "react-native-svg": "^13.8.0",
+    "react-native-table-component": "^1.2.2",
     "yup": "^1.0.2"
   },
   "devDependencies": {
@@ -30,13 +32,16 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-table-component": "^1.2.4",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "i": "^0.3.7",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "npm": "^9.6.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
