fixed asynstorage test failing error

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "react-native-screens": "^3.20.0",
     "react-native-simple-toast": "^2.0.0",
     "react-native-svg": "^13.8.0",
-    "react-native-table-component": "^1.2.2",
     "yup": "^1.0.2"
   },
   "devDependencies": {
@@ -32,7 +31,6 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
-    "@types/react-native-table-component": "^1.2.4",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
@@ -55,6 +53,9 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFiles": [
+      "./jestSetup/jestSetupFile.js"
     ]
   }
 }
