--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^7.32.0",
     "i": "^0.3.7",
     "jest": "^26.6.3",
+    "jest-svg-transformer": "^1.0.0",
     "metro-react-native-babel-preset": "0.72.3",
     "npm": "^9.6.1",
     "react-native-svg-transformer": "^1.0.0",
@@ -54,8 +55,12 @@
       "json",
       "node"
     ],
+    "testEnvironment": "jsdom",
     "setupFiles": [
       "./jestSetup/jestSetupFile.js"
-    ]
+    ],
+    "transform": {
+      "^.+\\.svg$": "jest-svg-transformer"
+    }
   }
 }
